# opensslDemo

./: settings.gradle
app/: build.gradle
app/libs/: mqttbase-debug.aar  mqttphone-debug.aar
app/src/androidTest/java/com/zbq/myapplication/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  coturn_manager.cpp  coturn_manager.h  native-lib.cpp
app/src/main/cpp/client/: ns_turn_msg.c
app/src/main/cpp/event/: evutil.c  evutil_rand.c
app/src/main/cpp/hiredis/: async.c  hiredis.c  net.c
app/src/main/cpp/include/event/extra/: arc4random.c
app/src/main/cpp/include/ns_turn/: Log.h
app/src/main/cpp/include/openssl/: configuration.h
app/src/main/cpp/p2p/: connect_manager.c  connect_manager.h  p2p_client.c  p2p_client.h  uclient_manager.c  uclient_manager.h
app/src/main/cpp/stunclient/: stun_manager.c  stun_manager.h
app/src/main/cpp/uclient/: startuclient.c  startuclient.h  uclient.c  uclient.h  uclient_manager.c  uclient_manager.h
app/src/main/java/: TestSocket.kt
app/src/main/java/com/zbq/myapplication/: CoturnManager.kt  CoturnMqttWrapper.kt  IMainContract.kt  MainActivity.kt  MainPresenter.kt  MqttWrapper.kt  OnIPAddressObserver.kt  Utils.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/zbq/myapplication/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
